minor style fixes